[package]
name = "asynctcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rf24-rs = { version = "0.3.1" , features = ["std"]}
linux-embedded-hal = { version = "0.4.0", features = ["spi", "gpio-cdev"]}
light-protocol = { version = "0.1.0", path = "../light-protocol" }
