[package]
name = "light-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
light-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

rf24-rs = { version = "0.3.1" , features = ["std"]}
linux-embedded-hal = { version = "0.4.0", features = ["spi", "gpio-cdev"]}
env_logger = "0.11.8"
log = "0.4.29"
