[package]
name = "light-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = { version = "0.29.0", features = ["event-stream"] }
light-protocol = { version = "0.1.0", path = "../light-protocol" }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
