[package]
name = "light-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
light-protocol = { workspace = true }

anyhow = "1.0.100"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
futures = "0.3"
